--- a/src/app/admin/features/channel_setting/Reports/msoreports/msoreports.component.html
+++ b/src/app/admin/features/channel_setting/Reports/msoreports/msoreports.component.html
@@ -156,6 +156,10 @@
               class="fas fa-tv"></i>
             <div><strong>Lco Transfer Details Report</strong> </div>
           </div>
+            <div class="card royal-card tooltip-container" (click)="openMsoDialog('repair_smartcard')"><i
+              class="fas fa-check-circle"></i>
+            <div><strong>Repair Smartcard Report </strong> </div>
+          </div>
           <!-- <div class="card"><i class="fas fa-file-upload"></i>
           <div><strong>Invertory Upload Report</strong> </div>
         </div>
