--- a/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
+++ b/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
@@ -1,4 +1,8 @@
 <div *ngIf="role == 'ROLE_OPERATOR'">
+    <!-- <div class="col-12 col-md-2 d-flex  justify-content-start align-items-start">
+            <button type="button" class="btn btn-primary bttn" (click)="goBack()"><i
+                    class="fa-solid fa-reply mx-2"></i>Back</button>
+        </div> -->
     <div class="row" style="padding: 10px;">
         <div class="col-12 col-md-7 display justify-content-center align-item-center balance gap-3">
             <div class="col-12 col-lg-4 mb-3 ">
@@ -200,7 +204,6 @@
                 <div class="card box d-flex flex-column justify-content-between p-3" (click)="openLCO_Dialog(13)">
                     <div class="d-flex justify-content-between w-100">
                         <i class='bx bxs-group'></i>
-                        <!-- <span class="fw-bold">{{operatorDetailsCount?.areachange}}</span> -->
                     </div>
                     <div class="mt-2 mb-2 text-center text">LCO Transfer</div>
                 </div>
@@ -248,6 +251,10 @@
     </div>
 </div>
 <div *ngIf="role == 'ROLE_SUBLCO'" class="row" style="padding: 10px;">
+      <!-- <div class="col-12 col-md-2 d-flex  justify-content-start align-items-start">
+            <button type="button" class="btn btn-primary bttn" (click)="goBack()"><i
+                    class="fa-solid fa-reply mx-2"></i>Back</button>
+        </div> -->
     <div class="col-12 col-md-7 display justify-content-center align-item-center balance gap-3">
         <div class="col-12 col-lg-6 mb-3 ">
             <div *ngIf="walletshare" class="card box d-flex flex-column justify-content-between p-3" (click)="addnew()">
