--- a/src/app/admin/features/channel_setting/Reports_page/MSO/msor-dialogueports/msor-dialogueports.component.html
+++ b/src/app/admin/features/channel_setting/Reports_page/MSO/msor-dialogueports/msor-dialogueports.component.html
@@ -1400,3 +1400,32 @@
     </div>
 
 </div>
+<div *ngIf="type== 'repair_smartcard'">
+    <h4>REPAIR SMARTCARD REPORT</h4>
+    <div class="row " style="padding: 1rem;">
+        <div class="col-12 col-md-12 d-flex  justify-content-between align-items-start">
+            <button type="button" class="btn btn-primary bttn" (click)="goBack()"><i
+                    class="fa-solid fa-reply mx-2"></i>Back</button>
+            <div class="row">
+                <div class="col-md-12 d-flex justify-content-center align-items-start mb-3">
+                    <div class="col-12 d-flex justify-content-start align-items-center flex-wrap">
+                        <div class="d-flex align-items-center submit">
+                            <div class="export-icon me-2" (click)="getRepairSmartcardReport(2)">
+                                <img src="/assets/images/icons/Excel.png" alt="Excel Icon">
+                            </div>
+                            <div class="export-icon" (click)="getRepairSmartcardReport(1)">
+                                <img src="/assets/images/icons/pdf.png" alt="PDF Icon" width="40px">
+                                <div class="tooltip">Pdf</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class" rowAnimation
+        [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="rowData" [rowHeight]="150"
+        (gridReady)="onGridReady($event)" [enableCellTextSelection]="true">
+    </ag-grid-angular>
+
+</div>
