--- a/src/app/admin/features/nav/nav.component.html
+++ b/src/app/admin/features/nav/nav.component.html
@@ -22,7 +22,7 @@
                 [ngStyle]="{'visibility': !isSidebarlogo ? 'visible' : 'hidden'}"> {{msoName}} </h5>
             <p class="brand-text"
                 style="margin: 0px 30px;color: var(--primary-color);;text-align: center;font-size: 13px;"
-                [ngStyle]="{'visibility': !isSidebarlogo ? 'visible' : 'hidden'}"> V-6.9.31 </p>
+                [ngStyle]="{'visibility': !isSidebarlogo ? 'visible' : 'hidden'}"> V-7.2.4 </p>
             <!-- -----------------------------r-digital----------- -->
             <!-- <h5 class="brand-text mb-1" style="margin: 5px 30px;color: #525151"
                 [ngStyle]="{'visibility': !isSidebarlogo ? 'visible' : 'hidden'}"> {{msoName}} </h5>
@@ -41,8 +41,12 @@
                 class="active nav-link">
                 <i class="bx bx-home bx-sm icon "></i>
                 Dashboard</a></li>
-        <li *ngIf="(isUser || isReception) && navigationList.topsubscription"><a
+        <li *ngIf="username !=='manikandan' && (isUser || isReception) && navigationList.topsubscription"><a
                 (click)="navgetToUrl('/top_subscription');setActiveLinkTabList($event)" [class.hide]="!isSidebarOpen"
+                class="nav-link"><i class='bx bx-table bx-sm icon'></i>
+                Top Subscription Details</a></li>
+        <li *ngIf="username =='manikandan' && (isUser || isReception) && navigationList.topsubscription"><a
+                (click)="navgetToUrl('/top_sub_detail');setActiveLinkTabList($event)" [class.hide]="!isSidebarOpen"
                 class="nav-link"><i class='bx bx-table bx-sm icon'></i>
                 Top Subscription Details</a></li>
 
@@ -57,7 +61,12 @@
             </a>
         </li>
         <li *ngIf="isInventory">
-            <a (click)="setActiveLinkListTab($event); navgetToUrl('/inventory_license')" class="nav-link">
+            <a *ngIf="username == 'manikandan'"
+                (click)="setActiveLinkListTab($event); navgetToUrl('/inventory_cortonbox_data')" class="nav-link">
+                <mat-icon class="icon">event_busy</mat-icon> &nbsp;License Extend
+            </a>
+            <a *ngIf="username !== 'manikandan'"
+                (click)="setActiveLinkListTab($event); navgetToUrl('/inventory_license')" class="nav-link">
                 <mat-icon class="icon">event_busy</mat-icon> &nbsp;License Extend
             </a>
         </li>
@@ -70,22 +79,38 @@
         <li *ngIf="isUser || isReception ">
             <a> <i class="bx bx-user bx-sm icon "></i> Operator <i class='bx bx-chevron-right icon-right'></i></a>
             <ul class="side-dropdown">
-                <li *ngIf="isLco && navigationList.operatordetails"><a
+                <li *ngIf=" username == 'manikandan' && (isLco && navigationList.operatordetails)"><a
                         (click)="navgetToUrl('/operator_details');setActiveLinkTab($event)">
                         <i class='fa fa-fw fa-users  icon'></i> &nbsp;
                         Operator Details</a></li>
-                <li *ngIf="!isLco && navigationList.operatordetails"><a
+                <li *ngIf=" username == 'manikandan' &&  (!isLco && navigationList.operatordetails)"><a
                         (click)="navgetToUrl('/lco_recharge/1');setActiveLinkTab($event)">
                         <i class='fa fa-fw fa-users  icon'></i> &nbsp;
                         Operator Details</a></li>
-                <li *ngIf="navigationList.lcorecharge"><a
+                <li *ngIf=" username !== 'manikandan' && (isLco && navigationList.operatordetails)"><a
+                        (click)="navgetToUrl('/operator_details');setActiveLinkTab($event)">
+                        <i class='fa fa-fw fa-users  icon'></i> &nbsp;
+                        Operator Details</a></li>
+                <li *ngIf=" username !== 'manikandan' &&  (!isLco && navigationList.operatordetails)"><a
+                        (click)="navgetToUrl('/lco_recharge/1');setActiveLinkTab($event)">
+                        <i class='fa fa-fw fa-users  icon'></i> &nbsp;
+                        Operator Details</a></li>
+
+                        
+                <li *ngIf="username !== 'manikandan' && navigationList.lcorecharge"><a
                         (click)="navgetToUrl('/lco_recharge/2');setActiveLinkTab($event)"><i
-                            class='fa-solid fa-indian-rupee-sign icon'></i> &nbsp;LCO
-                        Recharge</a></li>
-                <li *ngIf="navigationList.lcorecharge"><a
+                            class='fa-solid fa-indian-rupee-sign icon'></i> &nbsp;LCO Recharge</a></li>
+                <li *ngIf="username == 'manikandan' && navigationList.lcorecharge"><a
+                        (click)="navgetToUrl('/lcorecharge/1');setActiveLinkTab($event)"><i
+                            class='fa-solid fa-indian-rupee-sign icon'></i> &nbsp;LCO Recharge</a></li>
+
+
+                <li *ngIf=" username !== 'manikandan' && navigationList.lcorecharge"><a
                         (click)="navgetToUrl('/lco_recharge/3');setActiveLinkTab($event)"><i
-                            class='fa-solid fa-indian-rupee-sign icon'></i> &nbsp;Admin
-                        Recharge</a></li>
+                            class='fa-solid fa-indian-rupee-sign icon'></i> &nbsp;Admin Recharge</a></li>
+                <li *ngIf=" username == 'manikandan' && navigationList.lcorecharge"><a
+                        (click)="navgetToUrl('/lcorecharge/2');setActiveLinkTab($event)"><i
+                            class='fa-solid fa-indian-rupee-sign icon'></i> &nbsp;Admin Recharge</a></li>
             </ul>
         </li>
 
@@ -172,10 +197,11 @@
                 <li *ngIf="navigationList.packagemaster"><a (click)="navgetToUrl('/PackageMaster')"
                         (click)="setActiveLinkTab($event)"><i class="fa fa-fw fa-cubes icon ">&nbsp;</i>Package
                         Master </a></li>
-                <!-- <li><a (click)="navgetToUrl('/LcoCommission');setActiveLinkTab($event)"><i
+                <li *ngIf="username == 'manikandan' && navigationList.lcocommission"><a
+                        (click)="navgetToUrl('/LcoCommission');setActiveLinkTab($event)"><i
                             class="fa fa-fw fa-th-large icon ">&nbsp;</i>Lco
-                        Commission </a></li> -->
-                <li *ngIf="navigationList.lcocommission"><a
+                        Commission </a></li>
+                <li *ngIf="username !== 'manikandan' && navigationList.lcocommission"><a
                         (click)="navgetToUrl('/LcoCommission_credential');setActiveLinkTab($event)"><i
                             class="fa fa-fw fa-th-large icon ">&nbsp;</i>Lco
                         Commission </a></li>
@@ -369,8 +395,16 @@
         <li *ngIf="isSpecial ">
             <a> <i class="bx bx-cog bx-sm icon "></i> Settings <i class='bx bx-chevron-right icon-right'></i></a>
             <ul class="side-dropdown">
-                <li><a (click)="navgetToUrl('/loginsettings_credential')" (click)="setActiveLinkTab($event)"> <i
+                <!-- <li><a (click)="navgetToUrl('/loginsettings_credential')" (click)="setActiveLinkTab($event)"> <i
                             class='fa fa-fw fa-users  icon'></i> &nbsp; Login Settings</a></li>
+                <li><a (click)="navgetToUrl('/loginsettings_credential')" (click)="setActiveLinkTab($event)"> <i
+                            class='fa fa-fw fa-users  icon'></i> &nbsp; Login Settings</a></li> -->
+                <li *ngIf="username== 'manikandan'"><a (click)="navgetToUrl('/loginsettings')"
+                        (click)="setActiveLinkTab($event)"> <i class='fa fa-fw fa-users  icon'></i> &nbsp; Login
+                        Settings</a></li>
+                <li *ngIf="username !== 'manikandan'"><a (click)="navgetToUrl('/loginsettings_credential')"
+                        (click)="setActiveLinkTab($event)"> <i class='fa fa-fw fa-users  icon'></i> &nbsp; Login
+                        Settings</a></li>
             </ul>
         </li>
         <li class="mb-3" *ngIf="isSpecial">
@@ -463,8 +497,7 @@
                             class="fa fa-fw fa-solid fa-users icon ">&nbsp;</i>Bulk Operator Creation </a> </li>
                 <li *ngIf="distributor"><a (click)="navgetToUrl('/special_lcotransfer');setActiveLinkTab($event)">
                         <i class='fas fa-exchange-alt icon'></i> &nbsp;LCO Transfer</a> </li>
-                <li ><a
-                        (click)="navgetToUrl('/Subscription_Extend');setActiveLinkTab($event)"><i
+                <li><a (click)="navgetToUrl('/Subscription_Extend');setActiveLinkTab($event)"><i
                             class="fa fa-fw fa-cubes icon">&nbsp;</i>Subscription Extend</a> </li>
             </ul>
         </li>
@@ -583,16 +616,16 @@
                 &nbsp;
                 &nbsp;
                 <div class="nav-content w-100 d-flex justify-content-between align-items-center">
-                    <div *ngIf="!isOperator" class="version col-4 col-md-4">
+                    <!-- <div *ngIf="!isOperator" class="version col-4 col-md-4">
                         <span class="ver" style="color: var(--role-color);"> {{role}}
                             &nbsp;</span>
-                    </div>
+                    </div> -->
                     <div *ngIf="isOperator" class="version col-4 col-md-4">
                         <span class="ver" style="color: var(--role-color);"> {{operatorname}}
                             &nbsp;</span>
                     </div>
                     <div *ngIf="!isSearch"
-                        class="search-and-image col-7 col-md-7 col-sm-7 col-lg-7 d-flex justify-content-end align-items-center"
+                        class="search-and-image col-7 col-md-7 col-sm-7 col-lg-7 d-flex justify-content-start align-items-center"
                         (clickOutside)="closeDropdown()">
                         <div class="search">
                             <span class="fa fa-search"></span>
