--- a/src/app/admin/features/version/version.component.html
+++ b/src/app/admin/features/version/version.component.html
@@ -44,9 +44,9 @@
             <span>{{ message }}</span>
         </div>
     </div>
-    <button class="btn btn-outline-info mx-1 mb-4" mat-raised-button
+    <!-- <button class="btn btn-outline-info mx-1 mb-4" mat-raised-button
         style="background-color: rgb(0, 89, 255);color: white;" type="button" (click)="playVideo()">Features (Video)
-        :-</button>
+        :-</button> -->
     <div *ngIf="showVideo" #videoSection class="d-flex flex-column align-items-center">
         <video #videoPlayer width="1500" height="700" controls autoplay="true" muted class="mb-4">
             <source src="assets/videos/RSMS.mp4" type="video/mp4">
