--- a/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.html
+++ b/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.html
@@ -100,6 +100,11 @@
                         <div><strong>Synchronization Report</strong> </div>
                         <div class="tooltip">SYNCHRONIZATION</div>
                     </div>
+                    <div class="card royal-card tooltip-container" (click)="openSubscriptionDialogue('castype')">
+                        <i class="fas fa-file-alt"></i>
+                        <div><strong>CAS wise First Time Activation Report</strong> </div>
+                        <div class="tooltip">CAS WISE FIRST TIME ACTIVATION</div>
+                    </div>
                 </div>
             </mat-expansion-panel>
         </mat-accordion>
