--- a/src/app/admin/features/channel_setting/Reports_page/Trai/subscription-based/subscription-based.component.scss
+++ b/src/app/admin/features/channel_setting/Reports_page/Trai/subscription-based/subscription-based.component.scss
@@ -127,3 +127,21 @@
 .switch .look:checked+label {
     background-color: rgb(2, 75, 44);
 }
+
+
+.select2-container {
+    width: 250px !important;
+}
+
+::ng-deep .select2-container .select2-selection--single {
+    height: 45px !important;
+    margin-top: 1%;
+}
+
+::ng-deep .select2-container .select2-selection--single .select2-selection__rendered {
+    margin-top: 7px;
+}
+
+::ng-deep .select2-container--default .select2-selection--single .select2-selection__arrow {
+    top: 10px;
+}
