--- a/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.html
+++ b/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.html
@@ -736,7 +736,8 @@
 
                                         <div *ngIf="(role =='ROLE_SUBLCO' && sublcoDiscount == 1 && wallet) ||  (role !='ROLE_SUBLCO')"
                                             class="input_box  mb-3">
-                                            <div class="d-flex align-items-center justify-content-center">
+                                            <div *ngIf="role !=='ROLE_SUBSCRIBER'"
+                                                class="d-flex align-items-center justify-content-center">
                                                 <div class="col-6 col-md-6">
                                                     <span class="me-2">MSO Amount</span>
                                                 </div>
@@ -745,8 +746,6 @@
                                                 </div>
                                             </div>
                                         </div>
-
-
 
                                         <div class="input_box  mb-3">
                                             <div class="d-flex align-items-center justify-content-center">
